# torch2.6_backend_register

./: .gitignore  CMakeLists.txt  README.md  readme.md  run_build_and_test.sh  runing_expected_log.txt  setup.py  torch_tcu.cpp  ut_basic_backend.py  ut_import_tcu_op_add.py  ut_load_call_backendop.py  ut_load_callbackendModel.py
